--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "@bimdata/viewer": "^1.10.3",
     "vue": "^3.4.5"
+  },
+  "devDependencies": {
+    "http-server": "^14.1.1"
   }
 }
